# sys-widget

./: .env  Cargo.toml  INSTALLATION.md  README.md  config.toml
src/: config.rs  main.rs  mod.rs.bakup  theme.rs
themes/: dark.css  default.css  glass.css  light.css
